// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={9999}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={9999}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Title control with default props 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={5}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar test-class ripple"
    disabled={false}
    layout={5}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={5}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget={null}
      width={null}
      xcss={
        Array [
          "text-align:left;flex:5;",
        ]
      }
    />
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={1}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar ripple"
    disabled={false}
    layout={1}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={1}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={1}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:1;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={6}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar ripple"
    disabled={false}
    layout={6}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={6}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget={null}
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={0}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar ripple"
    disabled={false}
    layout={0}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={0}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={0}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:3;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={4}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar ripple"
    disabled={false}
    layout={4}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={4}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "display:block;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={4}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "display:block;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={3}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar ripple"
    disabled={false}
    layout={3}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={3}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:1;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={3}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:2;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={2}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget="widget"
  width={null}
  xcss={null}
>
  <Title__TitleView
    className="ui-title-bar ripple"
    disabled={false}
    layout={2}
    ripple={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Title__StyledLabel
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={2}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      onUpdate={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:left;flex:3;",
        ]
      }
    />
    <Title__StyledWidget
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className="ui-title-widget"
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      id={null}
      layout={2}
      left={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth={null}
      noborder={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "buttonColor": "#666666",
          "chevronColor": "#cccccc",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "outlineColor": "#51cbee",
          "searchFocus": "#51cbee",
          "searchMatch": "#fd7400",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.33s",
        }
      }
      title="Test label text"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget="widget"
      width={null}
      xcss={
        Array [
          "text-align:right;flex:1;",
        ]
      }
    >
      widget
    </Title__StyledWidget>
  </Title__TitleView>
</Wrapper>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={5}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={true}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  layout={5}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onUpdate={[Function]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  title="Test label text"
  tooltip={null}
  top={null}
  useedit={false}
  visible={false}
  widget={null}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "hidden": false,
  "id": null,
  "layout": 5,
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "nopropagation": false,
  "notheme": false,
  "notooltip": false,
  "onClick": [Function],
  "onUpdate": [Function],
  "padding": null,
  "ripple": true,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {
    "backgroundColor": "#ffffff",
    "borderColor": "#c0c0c0",
    "buttonColor": "#666666",
    "chevronColor": "#cccccc",
    "color": "#000000",
    "fontFamily": "OpenSans, Georgia, serif",
    "headerBackgroundColor": "#004358",
    "headerForegroundColor": "#ffffff",
    "headerHoverColor": "#ffe11a",
    "hoverColor": "#c0c0c0",
    "inputBorderColor": "#c0c0c0",
    "itemHoverColor": "#bedb39",
    "outlineColor": "#51cbee",
    "searchFocus": "#51cbee",
    "searchMatch": "#fd7400",
    "selectedBackgroundColor": "#1f8a70",
    "selectedForegroundColor": "#ffe11a",
    "titleBarBackgroundColor": "#004358",
    "titleBarForegroundColor": "#ffe11a",
    "tooltipBackgroundColor": "#708090",
    "tooltipForegroundColor": "#ffffff",
    "transitionDelay": "0.33s",
  },
  "tooltip": null,
  "top": null,
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Title props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
}
`;
